[project]
name = "goit-ds-hw-01"
version = "0.1.0"
description = "poetry init"
authors = [
    {name = "mykyta",email = "nikita.slipachuk@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = "3.12.2"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
